Modify to run dagger/main.go in action

--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -1,22 +1,18 @@
-name: dagger
+name: Dagger
 on:
   push:
     branches: [main]
 
 jobs:
   hello:
-    name: hello
+    name: CUDA
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Call Dagger Function
-        uses: dagger/dagger-for-github@v6
+      - uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          version: "latest"
-          verb: call
-          module: github.com/shykes/daggerverse/hello@v0.1.2
-          args: hello --greeting="bonjour" --name="monde"
-          # assumes the Dagger Cloud token is in
-          # a repository secret named DAGGER_CLOUD_TOKEN
-          # set via the GitHub UI/CLI
-          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          go-version: '1.23'
+
+      - name: Build CUDA Image
+        run: go run -v dagger/main.go
