Add dagger token as env var

--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -16,3 +16,5 @@ jobs:
 
       - name: Build CUDA Image
         run: go run -v dagger/main.go
+        env:
+          DAGGER_CLOUD_TOKEN: ${{ secrets.DAGGER_CLOUD_TOKEN }}
